QWW-961-41743 fixing footer display on IE

--- a/public_html/sites/all/themes/custom/site/src/less/syddjurs-overrides.less
+++ b/public_html/sites/all/themes/custom/site/src/less/syddjurs-overrides.less
@@ -459,8 +459,8 @@ div.node--os2web_base_iframe--full {
       display: flex;
       flex-direction: column;
       justify-content: center;
-      padding-top: 10px;
-      padding-bottom: 10px;
+      //padding-top: 10px;
+      //padding-bottom: 10px;
       line-height: 24px;
     }
     .icon-inverse {
